# darshan-test-versio

./: .envrc  .gitignore  .gitignore copy  .pre-commit-config.yaml  .versio.yaml  README.md  auto_tag.sh  describe.sh
.circleci/: config.yml  testing.yml  (+1 more)
apps/api_handler/: .flake8  Dockerfile  Dockerfile.old  README.md  api_handler.py  pyproject.toml
apps/api_handler/.circleci/: config-dev-api.yml  config-prod.yml  config-qa.yml  config-staging.yml  config.yml
apps/api_handler/app/config/: dev-api_otel_collector.yaml  prod_otel_collector.yaml  rberger_otel_collector.yaml  test_otel_collector.yaml
apps/api_handler/app/controllers/: application_controller.py  base_controller.py  documents.py  documents_controller.py
apps/api_handler/app/database/: dynamo_db.py  parameter_store.py  s3.py
apps/api_handler/app/helpers/: application_orchestrator.py  jwt.py  opentelemetry.py
apps/api_handler/app/schemas/v1/: address.py  applicant.py  applicants.py  asset.py  employment_info.py  stipulations.py
apps/api_handler/app/schemas/v1/enums/: application_status.py  asset_type.py  employment_type.py  income_period_type.py  stipulation_status.py  vehicle_condition_type.py
apps/api_handler/tests/api_validation/006_service_missing/: config.yml  partner_profile.json
apps/api_handler/tests/api_validation/008_verification_missing/: expected.json  request_body.json
apps/api_handler/tests/api_validation/009_value_correct/: request_body.json
apps/api_handler/tests/api_validation/010_value_incorrect/: config.yml  expected.json  request_body.json
apps/app_demo_page_ocr/: .gitignore  Dockerfile  README.md  event-rob.json  pyproject.toml
apps/app_demo_page_ocr/.circleci/: config-dev-api.yml  config-prod.yml  config-qa.yml  config-staging.yml  config.yml
apps/app_demo_page_ocr/page_ocr/: handler.py
apps/app_demo_page_ocr/page_ocr/helpers/: setup_logging.py
apps/app_demo_page_ocr/page_ocr/libraries/: lambdas.py
apps/app_demo_page_ocr/src/page_ocr/: config.yaml  handler.py
apps/app_demo_page_ocr/src/page_ocr/libraries/: google_vision_api.py
apps/app_demo_page_ocr/src/page_ocr/schemas/: image_process_start.py
apps/app_demo_page_ocr/src/page_ocr/utils/: image.py  ocr.py
apps/app_demo_page_ocr/tests/: conftest.py  event_helper.py  test_page_ocr.py
apps/partner_profile/: .flake8  Implementation_details.md  README.md  partner_profile.py  pyproject.toml  request_spec.json
apps/partner_profile/.circleci/: config-dev-api.yml  config-prod.yml  config-qa.yml  config.yml
apps/partner_profile/api-specs/: partner-profile.json  postman_collection.json  postman_openapi.json  rest-openapi.json
apps/partner_profile/api-specs/services/: analyzeIq.json  collectIq.json  metadata.json  monitoringAlerting.json  redaction.json  serialization.json  stipulationCreationRules.json  stipulationVerificationConfig.json  verifyIq.json
apps/partner_profile/app/config/: dev_otel_collector.yaml  staging_otel_collector.yaml
apps/partner_profile/app/controllers/: admin.py  partner_profile.py
apps/partner_profile/app/database/: dynamo_db.py  serializer.py  unique_key.py
apps/partner_profile/app/helpers/: setup_logging.py
apps/partner_profile/app/schemas/: analyze_iq.py  basicAuth.py  collect_iq.py  metadata.py  monitoring_alerting.py  oAuth.py  parent_partner.py  partner_profile_request.py  redaction.py  serialization.py  stipulation_creation_rules.py  stipulation_verification_config.py  verify_iq.py
apps/partner_profile/app/scripts/: api_spec.py
apps/response_handler/: .gitignore  README.md  pyproject.toml  response_handler.py
apps/response_handler/.circleci/: config-dev-api.yml  config-prod.yml  config-qa.yml  config.yml
apps/response_handler/app/config/: dev-api_otel_collector.yaml  dev_otel_collector.yaml
apps/response_handler/app/controllers/: webhook.py
apps/response_handler/app/database/: parameter_store.py  s3.py
apps/response_handler/app/helpers/: event_bridge.py  jwt.py  response_builder.py  setup_logging.py
apps/response_handler/tests/: end_to_end.py  test_response_handler.py
apps/response_handler/tests/input_events/: sample_extraction_response.json  sample_verification_response.json
apps/response_handler/tests/test_files/: new_stipulation_json_format.json  old_stipulation_json_format.json
(+421 files in other folders)
