[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Rahul Salla <rahul.salla@informed.iq>"]
include = ["partner_profile.py"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.21.29"
aws-lambda-powertools = "^1.25.5"
honeybadger = "^0.8.0"
pydantic = "^1.9.0"
inflection = "^0.5.1"
simplejson = "^3.17.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-xdist = "^2.5.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"

[tool.poetry.scripts]
create-api-spec = "app.scripts.api_spec:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
