[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Rahul Salla <rahul.salla@informed.iq>"]
include = ["response_handler.py"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.21.29"
PyJWT = "^2.3.0"
honeybadger = "^0.8.0"
simplejson = "^3.17.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-xdist = "^2.5.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"
opentelemetry-api = "^1.12.0"
opentelemetry-sdk = "^1.12.0"
python-dotenv = {extras = ["cli"], version = "^0.20.0"}
pytest-dotenv = {extras = ["cli"], version = "^0.5.2"}

[tool.poetry.scripts]
analyze-response-handler = "tests.end_to_end:analyze"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
